--- a/3D-Diffusion-Policy/diffusion_policy_3d/config/dp3.yaml
+++ b/3D-Diffusion-Policy/diffusion_policy_3d/config/dp3.yaml
@@ -1,4 +1,5 @@
 defaults:
+  - _self_
   - task: adroit_hammer
 
 name: train_dp3
@@ -9,9 +10,9 @@ exp_name: "debug"
 
 # horizon: 4
 horizon: 16
-n_obs_steps: 2
+n_obs_steps: 1
 # n_action_steps: 3
-n_action_steps: 8
+n_action_steps: 1
 n_latency_steps: 0
 dataset_obs_steps: ${n_obs_steps}
 keypoint_visible_rate: 1.0
@@ -56,12 +57,12 @@ policy:
   obs_as_global_cond: true
   shape_meta: ${shape_meta}
 
-  use_pc_color: false
+  use_pc_color: true
   pointnet_type: "pointnet"
 
 
   pointcloud_encoder_cfg:
-    in_channels: 3
+    in_channels: 6  # 3 for xyz, 3 for rgb
     out_channels: ${policy.encoder_output_dim}
     use_layernorm: true
     final_norm: layernorm # layernorm, none
@@ -78,14 +79,14 @@ ema:
 
 dataloader:
   batch_size: 128
-  num_workers: 8
+  num_workers: 4
   shuffle: True
   pin_memory: True
   persistent_workers: False
 
 val_dataloader:
   batch_size: 128
-  num_workers: 8
+  num_workers: 4
   shuffle: False
   pin_memory: True
   persistent_workers: False
