--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "3D-Diffusion-Policy/diffusion_policy_3d/env/ur5_bullet"]
 	path = 3D-Diffusion-Policy/diffusion_policy_3d/env/ur5_bullet
 	url = git@github.com:Atlantic-Robotics-Lab/ur5-bullet.git
+	branch = master
